--- a/mysite2/news/templates/menu/isiberita.html
+++ b/mysite2/news/templates/menu/isiberita.html
@@ -15,13 +15,13 @@
 </head>
 <body>
     {% block content %}
-<div class="container">
-  <div class="cover">
-    <img src="https://www.shutterstock.com/shutterstock/videos/4924517/thumb/2.jpg?ip=x480" style="width: 1890px; height: 350px; margin-left: -265px;" alt="">
-    <img style="border-radius: 50%; width: 180px; height: 180px; margin-left: -100px; margin-top: -120px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/CNN_International_logo.svg/2048px-CNN_International_logo.svg.png" alt="">
-    <h2 class="name" style="border-radius: 50%; margin-left: 125px; margin-top: -120px; color: white;">CNN INDONESIA</h2>
-  </div>
-</div>
+    <div class="container">
+      <div class="cover">
+        <img src="https://www.shutterstock.com/shutterstock/videos/4924517/thumb/2.jpg?ip=x480" style="width: 1366px; height: 350px; margin-left: -125px;" alt="">
+        <img style="border-radius: 50%; width: 180px; height: 180px; margin-left: 40px; margin-top: -120px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/CNN_International_logo.svg/2048px-CNN_International_logo.svg.png" alt="">
+        <h2 class="name" style="border-radius: 50%; margin-left: 250px; margin-top: -120px; color: white;">CNN INDONESIA</h2>
+      </div>
+    </div>
 
 <br><br>
 
@@ -92,7 +92,81 @@
 
   <br>
 
+  <h4 style="padding-left: 180px; padding-top: 0px; font-weight: bold;">Topik terkait</h4>
+
+  <br>
+
+  <div class="container text-center" style="padding-left: 95px; padding-top: 0px;">
+    <div class="row row-cols-auto">
+      <div class="col"><a href="https://www.bbc.com/indonesia/topics/c06gq3yj3w3t">Islam</a></div>
+      <div class="col"><a href="https://www.bbc.com/indonesia/topics/c1gdq2kvnd0t">Muslim</a></div>
+      <div class="col"><a href="https://www.bbc.com/indonesia/topics/c2dwqj8n8kdt">Israel-Palestina</a></div>
+      <div class="col"><a href="https://www.bbc.com/indonesia/topics/c6vzy7r9k8gt">Politik</a></div>
+      <div class="col"><a href="https://www.bbc.com/indonesia/topics/c5qvpxjx17xt">Amerika Serikat</a></div>
+      <div class="col"><a href="https://www.bbc.com/indonesia/topics/cjgn7k1ww8jt">Timur Tengah</a></div>
+    </div>
+  </div>
+
+  <br>
+
+  <div class="container text-center" style="padding-left: 95px; padding-top: 0px;">
+    <div class="row row-cols-auto">
+      <div class="col"><a href="https://www.bbc.com/indonesia/topics/cpzd4kxw3xxt">Dunia Arab</a></div>
+      <div class="col"><a href="https://www.bbc.com/indonesia/topics/cr50yk8618jt">Israel</a></div>
+      <div class="col"><a href="https://www.bbc.com/indonesia/topics/cvjp25wxvjnt">Palestina</a></div>
+    </div>
+  </div>
+
+  <br>
+
+  <!-- Footer  -->
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">Cable News Network (CNN, "Jaringan Berita Kabel") adalah sebuah saluran berita kabel asal AS yang didirikan tahun 1980 oleh konglomerat media asal Amerika Serikat Ted Turner.[1][2] Ketika diluncurkan, CNN adalah saluran televisi pertama yang menyiarkan liputan berita 24 jam,[3] dan saluran televisi berita pertama di Amerika Serikat.[4] Meski memiliki banyak cabang, CNN justru lebih sering mengudara dari kantor pusatnya di CNN Center di Atlanta, 30 Hudson Yards di New York City, dan studio di Washington, D.C. dan Los Angeles. CNN dimiliki oleh perusahaan induknya, Warner Bros. Discovery.[5]</p>
+      </div>
    
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Categories</h6>
+        <ul class="footer-links">
+          <li><a href="/trending">trending</a></li>
+          <li><a href="/olahraga">olahraga</a></li>
+          <li><a href="/politik">politik</a></li>
+          <li><a href="/gayahidup">gaya hidup</a></li>
+          <li><a href="/entertaimen">entertainment</a></li>
+          <li><a href="/kesehatan">kesehatan</a></li>
+        </ul>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="https://www.cnnindonesia.com/">About Us</a></li>
+          <li><a href="https://github.com/IhsanNA">Contact Me</a></li>
+          <li><a href="https://github.com/IhsanNA">Contribute</a></li>
+          <li><a href="https://github.com/IhsanNA">Privacy Policy</a></li>
+          <li><a href="https://github.com/IhsanNA">Sitemap</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+    <hr>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
+     <a href="#">Scanfcode</a>.
+        </p>
+      </div>
+
+     
+    </div>
+  </div>
+</footer>
     {% endblock %}
 </body>
 </html>
