--- a/mysite2/core/templates/core/index.html
+++ b/mysite2/core/templates/core/index.html
@@ -65,7 +65,7 @@
     </div>
   </div>
 
-<br>
+<br><br>
 
 <!-- Grid Teks -->
   <div class="container text-center">
@@ -76,7 +76,7 @@
   </div>
   </div>
 
-<br>
+<br><br>
 
 <!-- Card Horizontal -->
   <div class="container text-center">
@@ -91,7 +91,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Chad tarik kuasa usaha untuk Israel terkait krisis kemanusiaan di Gaza</h5>
                   <p class="card-text">Chad tarik kuasa usaha untuk Israel terkait krisis kemanusiaan di Gaza dan memburuknya kondisi kemanusiaan di sana.</p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                 
                 </div>
               </div>
             </div>
@@ -107,7 +107,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Negara yang mengecam serangan Israel ke Gaza?</h5>
                   <p class="card-text">Serangan Israel ke Gaza telah memecah belah suara negara-negara dunia seiring dengan meningkatnya korban jiwa.</p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                  
                 </div>
               </div>
             </div>
@@ -116,7 +116,7 @@
     </div>
   </div>
 
-<br>
+<br><br>
 
 <!-- Grid Teks -->
     <div class="container text-center" onclick="location.href='/isiberita'">
@@ -127,7 +127,7 @@
      </div>
     </div>
   
-<br>
+<br><br>
 
 
 
@@ -174,6 +174,25 @@
   </div>
 
 <br>
+
+<!-- Card -->
+<div class="container text-center">
+  <div class="row">
+      {% for berita in updates %}
+    <div class="col">
+      <div class="card" style="width: 15rem;">
+          <img src="{{berita.gambar.url}}" class="card-img-top">
+          <div class="card-body">
+              <h6>{{berita.kategori}}</h6>
+              <h6>{{berita.judul}}</h6>
+            <button type="button" class="btn btn-danger"><a href="{% url 'news:isi' berita.id %}" style="text-decoration: none; color: white;">Click Here</a></button>
+          </div>
+        </div>
+        <br>
+      </div>
+      {% endfor %}
+    </div>
+</div>
 
 <!-- Footer  -->
   <footer class="site-footer">
