--- a/mysite2/news/templates/menu/trending.html
+++ b/mysite2/news/templates/menu/trending.html
@@ -11,6 +11,9 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'index.css' %}">
     {% endblock htmlhead %}
+    <style>
+     
+    </style>
 </head>
 <body>
     {% block content %}
@@ -71,8 +74,9 @@
     </div>
   </div>
 
+<br><br>
+
   <!-- Header -->
-  <br>
   <div class="container text-center">
     <div class="row">
       <div class="col">
@@ -80,7 +84,8 @@
       </div>
    </div>
   </div>
-<br>
+
+<br><br>
 
   <!-- Big Card -->
   <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -122,7 +127,7 @@
     </div>
   </div>
   
-  <br>
+  <br><br>
 
   <!-- Grid Teks -->
   <div class="container text-center">
@@ -133,7 +138,7 @@
   </div>
   </div>
 
-  <br>
+  <br><br>
 
 
 
